--- a/www/templates/default/sass/main.sass
+++ b/www/templates/default/sass/main.sass
@@ -58,3 +58,10 @@ tr
     border: black 1px solid
     input
       width: 50px
+
+.user-data
+  tr
+    td
+      border: none
+      input
+        width: 100%
