--- a/www/templates/default/sass/main.sass
+++ b/www/templates/default/sass/main.sass
@@ -60,8 +60,22 @@ tr
       width: 50px
 
 .user-data
+  border-bottom: 3px solid black
   tr
     td
       border: none
       input
         width: 100%
+
+#frmOrder
+  width: 280px
+  textarea
+    width: 100%
+  input
+    width: 100%
+    &[type=button]
+      width: 100px
+
+td
+  table
+    width: 100%
